# NETAI-LLM-Integration-Kubernetes-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: mock_telemetry.json
data/sample/: fine_tuning_examples.jsonl  network_telemetry.json
docs/: architecture.md  deployment_guide.md
k8s/: configmap.yaml  deployment.yaml  gpu-deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: demo.py  seed_data.py
src/netai_chatbot/: __init__.py  config.py  main.py
src/netai_chatbot/api/: models.py
src/netai_chatbot/api/routes/: chat.py  diagnostics.py  health.py
src/netai_chatbot/fine_tuning/: data_prep.py  train.py
src/netai_chatbot/llm/: client.py  context.py  prompts.py
src/netai_chatbot/network/: anomaly.py  models.py  perfsonar.py  telemetry.py
src/netai_chatbot/storage/: conversations.py  database.py  telemetry_store.py
static/: app.js  index.html  style.css
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_llm/: test_client.py  test_context.py  test_prompts.py
tests/test_network/: test_anomaly.py  test_telemetry.py
tests/test_storage/: test_conversations.py  test_database.py
